# BeatlesChordsMarkovChain

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
beatles_chords_database/rootkey/: 01_-_A_Hard_Day's_Night.csv  01_-_Come_Together.csv  01_-_Help!.csv  01_-_I_Saw_Her_Standing_There.csv  01_-_It_Won't_Be_Long.csv  01_-_Sgt._Pepper's_Lonely_Hearts_Club_Band.csv  01_-_Two_of_Us.csv  02_-_All_I've_Got_To_Do.csv  02_-_Dig_a_Pony.csv  02_-_I_Should_Have_Known_Better.csv  02_-_Misery.csv  02_-_Something.csv  02_-_With_A_Little_Help_From_My_Friends.csv  03_-_Across_the_Universe.csv  03_-_All_My_Loving.csv  03_-_Anna_(Go_To_Him).csv  03_-_If_I_Fell.csv  03_-_Lucy_In_The_Sky_With_Diamonds.csv  03_-_Maxwell's_Silver_Hammer.csv  04_-_Don't_Bother_Me.csv  04_-_Getting_Better.csv  04_-_I'm_Happy_Just_To_Dance_With_You.csv  04_-_I_Me_Mine.csv  04_-_Oh!_Darling.csv  05_-_Dig_It.csv  05_-_Fixing_A_Hole.csv  05_-_Little_Child.csv  05_-_Octopus's_Garden.csv  06_-_I_Want_You.csv  06_-_Let_It_Be.csv  06_-_She's_Leaving_Home.csv  06_-_Till_There_Was_You.csv  07_-_Being_For_The_Benefit_Of_Mr._Kite!.csv  07_-_Here_Comes_The_Sun.csv  07_-_Maggie_Mae.csv  07_-_Please_Mister_Postman.csv  08_-_Because.csv  08_-_I've_Got_A_Feeling.csv  08_-_Roll_Over_Beethoven.csv  08_-_Within_You_Without_You.csv  (+27 more)
beatles_chords_markov_chain/: __init__.py  database_preprocessing.py  intervals.py  markov_chain.py  processed_data.py  testing_pandas.py
