[metadata]
name = beatles_chords_markov_chain
version = 0.0.2
author = Federico Di Marzo
author_email = mail.federicodimarzo@gmail.com
description = A package containing a Markov Chain that can generate chord progressions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/FedericoDiMarzo/BeatlesChordsMarkovChain
project_urls =
    Bug Tracker = https://https://github.com/FedericoDiMarzo/BeatlesChordsMarkovChain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .