[metadata]
name = beatles_chords_markov_chain
version = 0.0.11
author = Federico Di Marzo
author_email = mail.federicodimarzo@gmail.com
description = A package containing a Markov Chain that can generate chord progressions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/FedericoDiMarzo/BeatlesChordsMarkovChain
project_urls =
    Bug Tracker = https://https://github.com/FedericoDiMarzo/BeatlesChordsMarkovChain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    abstract-melody-parser==0.0.2
    decorator==4.4.2
    joblib==1.0.1
    networkx==2.5.1
    numpy==1.20.2
    pandas==1.2.4
    pomegranate==0.14.5
    python-dateutil==2.8.1
    pytz==2021.1
    PyYAML==5.4.1
    scipy==1.6.3
    six==1.16.0

[options.packages.find]
where = .